# opencv-clion-linux

./: CMakeLists.txt  READMe.md  main.cpp  vcpkg.json
